fixed - image wrap into link with hover

--- a/src/styles/sections/_profile-carousel.scss
+++ b/src/styles/sections/_profile-carousel.scss
@@ -258,6 +258,7 @@
               .profile-wrapper{
                 .content{
                   margin-top: -50px;
+                  margin-bottom: 30px;
                   width: fit-content;
                   padding: 0px 28px 0px 10px;
 
@@ -294,11 +295,11 @@
                   }
                 }
               }
-              &:hover {
-                .content{
-                  margin-bottom: 20px;
-                }
-              }
+              // &:hover {
+              //   .content{
+              //     margin-bottom: 20px;
+              //   }
+              // }
             }
             @media (max-width: 991px){
               .profile-container{
